test/corpus/definitions/attribute_definitions.txt
========================
Attribute Definition
========================

attribute x{}
pub attribute x{}

---

(source_file
    (attribute_definition
        name: (identifier))
    (attribute_definition
        (modifier)
        name: (identifier))
)
