test/corpus/expressions/binary_operators.txt
===================
Binary Operators
===================

1 + 2;
1 - 2;
1 * 2;
1 / 2;
1 < 2;
1 <= 2;
1 > 2;
1 >= 2;
1 == 2;
1 != 2;
1 = 2;
1 && 2;
1 || 2;

---
(source_file
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
    (binary_operator
        (int)
        (int))
)
