test/corpus/expressions/block.txt
=================
Block
=================

{}

var a = {};

{
    var a = 2;
}


---

(source_file
    (block)
    (variable_declaration
        name: (identifier)
        value: (block))
    (block
        (variable_declaration
            name: (identifier)
            value: (int)))
)
