test/corpus/expressions/comments.txt
====================
Comments
====================

var a =
// this is a comment
/*

hi

*/

"";

var a = "";

---

(source_file
    (variable_declaration
        name: (identifier)
        (comment)
        (comment)
        value: (string))
    (variable_declaration
        name: (identifier)
        value: (string)))
