test/corpus/expressions/index.txt
============
Index
============

x[0];
x[a];

---

(source_file
    (index
        owner: (variable_access name: (identifier))
        index: (int))
    (index
        owner: (variable_access name: (identifier))
        index: (variable_access name: (identifier)))
)
